--- a/src/main/resources/org/example/softfun_funsoft/Bye.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Bye.fxml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.softfun_funsoft.Bye"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.DineInOrTakeOutController">
+    <children>
+        <Rectangle fill="#db1f2a" height="800.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
+        <Text fill="WHITE" layoutX="591.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dine in Or Take out">
+            <font>
+                <Font name="Eras Bold ITC" size="44.0" />
+            </font>
+        </Text>
+        <Rectangle arcHeight="25.0" arcWidth="25.0" fill="WHITE" height="438.0" layoutX="381.0" layoutY="126.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="345.0" />
+        <Rectangle arcHeight="25.0" arcWidth="25.0" fill="WHITE" height="438.0" layoutX="804.0" layoutY="126.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="345.0" />
+        <Text fill="WHITE" layoutX="478.0" layoutY="611.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dine In">
+            <font>
+                <Font name="Eras Bold ITC" size="44.0" />
+            </font>
+        </Text>
+        <Text fill="WHITE" layoutX="885.0" layoutY="612.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Take Out">
+            <font>
+                <Font name="Eras Bold ITC" size="44.0" />
+            </font>
+        </Text>
+        <JFXButton fx:id="dineIn" layoutX="383.0" layoutY="126.0" onAction="#dineIn" prefHeight="438.0" prefWidth="344.0" text="." />
+        <JFXButton fx:id="takeOut" layoutX="805.0" layoutY="126.0" onAction="#takeOut" prefHeight="441.0" prefWidth="345.0" text="." />
+        <ImageView fitHeight="620.0" fitWidth="608.0" layoutX="-239.0" layoutY="78.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../pic_resources/McLUX_logo.png" />
+            </image>
+        </ImageView>
+        <ImageView fitHeight="243.0" fitWidth="251.0" layoutX="435.0" layoutY="228.0" onMouseClicked="#dineIn" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../pic_resources/dinner.png" />
+            </image>
+        </ImageView>
+        <ImageView fitHeight="236.0" fitWidth="283.0" layoutX="857.0" layoutY="234.0" onMouseClicked="#takeOut" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../pic_resources/food-package.png" />
+            </image>
+        </ImageView>
+    </children>
 </AnchorPane>
