--- a/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
@@ -1,34 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
+<AnchorPane prefHeight="788.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
    <children>
-      <AnchorPane prefHeight="791.0" prefWidth="771.0" style="-fx-background-color: #F2F2F2;">
+      <AnchorPane prefHeight="791.0" prefWidth="771.0" style="-fx-background-color: f8cd2b;">
          <children>
-            <TextArea fx:id="orderItemsArea" editable="false" layoutX="106.0" layoutY="163.0" prefHeight="544.0" prefWidth="572.0">
+            <TextArea fx:id="orderItemsArea" editable="false" layoutX="103.0" layoutY="105.0" prefHeight="544.0" prefWidth="572.0">
                <font>
                   <Font name="Gill Sans MT" size="24.0" />
                </font>
             </TextArea>
-            <Label layoutX="132.0" layoutY="112.0" text="McLux">
+            <Label layoutX="104.0" layoutY="21.0" text="McLux" textFill="WHITE">
                <font>
-                  <Font name="Gill Sans MT" size="30.0" />
+                  <Font name="Gill Sans MT" size="60.0" />
                </font>
             </Label>
-            <Label fx:id="grandTotal" layoutX="478.0" layoutY="722.0" prefHeight="40.0" prefWidth="197.0" text="Total:">
+            <Label fx:id="grandTotal" layoutX="478.0" layoutY="686.0" prefHeight="40.0" prefWidth="197.0" text="Total:">
                <font>
                   <Font name="Gill Sans MT" size="20.0" />
                </font>
             </Label>
-            <Button fx:id="cancelBTN" layoutX="24.0" layoutY="750.0" mnemonicParsing="false" onAction="#setCancelBTN" prefHeight="25.0" prefWidth="216.0" text="Cancel" />
+            <ImageView fitHeight="91.0" fitWidth="74.0" layoutX="284.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/McLUX_logo.png" />
+               </image>
+            </ImageView>
+            <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="46.0" layoutX="104.0" layoutY="681.0" stroke="RED" strokeType="INSIDE" strokeWidth="2.0" width="286.0" />
+            <JFXButton fx:id="cancelBTN" layoutX="104.0" layoutY="681.0" prefHeight="48.0" prefWidth="286.0" text="Not Sure?" textFill="RED">
+               <font>
+                  <Font name="Gill Sans MT Bold" size="26.0" />
+               </font>
+            </JFXButton>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="770.0" layoutY="-1.0" prefHeight="792.0" prefWidth="771.0" style="-fx-background-color: #FFFFFF;">
@@ -65,9 +79,9 @@
                </font>
             </TextField>
             <TextField fx:id="cardHolderNameField" layoutX="92.0" layoutY="408.0" prefHeight="44.0" prefWidth="605.0" />
-            <JFXComboBox fx:id="regionComboBox" layoutX="95.0" layoutY="513.0" prefHeight="44.0" prefWidth="605.0" promptText="America" />
+            <JFXComboBox fx:id="regionComboBox" layoutX="95.0" layoutY="513.0" prefHeight="44.0" prefWidth="605.0" promptText="Philippines" viewOrder="1.0" />
             <TextField fx:id="zipField" layoutX="93.0" layoutY="564.0" prefHeight="44.0" prefWidth="605.0" promptText="ZIP" />
-            <Button layoutX="92.0" layoutY="653.0" mnemonicParsing="false" onAction="#submit" prefHeight="45.0" prefWidth="605.0" style="-fx-background-color: #192552;" text="Pay" textFill="WHITE">
+            <Button layoutX="92.0" layoutY="684.0" mnemonicParsing="false" onAction="#submit" prefHeight="45.0" prefWidth="605.0" style="-fx-background-color: #192552;" text="Pay" textFill="WHITE">
                <font>
                   <Font name="Gill Sans MT" size="24.0" />
                </font>
