--- a/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextArea?>
@@ -12,8 +13,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.web.WebView?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
+<AnchorPane prefHeight="788.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
    <children>
       <AnchorPane prefHeight="791.0" prefWidth="771.0" style="-fx-background-color: f8cd2b;">
          <children>
@@ -43,6 +45,7 @@
                   <Font name="Gill Sans MT Bold" size="26.0" />
                </font>
             </JFXButton>
+            <WebView fx:id="webViewLink" layoutY="-2.0" prefHeight="792.0" prefWidth="771.0" visible="false" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="770.0" layoutY="-1.0" prefHeight="792.0" prefWidth="771.0" style="-fx-background-color: #FFFFFF;">
@@ -81,7 +84,7 @@
             <TextField fx:id="cardHolderNameField" layoutX="92.0" layoutY="408.0" prefHeight="44.0" prefWidth="605.0" />
             <JFXComboBox fx:id="regionComboBox" layoutX="95.0" layoutY="513.0" prefHeight="44.0" prefWidth="605.0" promptText="Philippines" viewOrder="1.0" />
             <TextField fx:id="zipField" layoutX="93.0" layoutY="564.0" prefHeight="44.0" prefWidth="605.0" promptText="ZIP" />
-            <Button layoutX="92.0" layoutY="684.0" mnemonicParsing="false" onAction="#submit" prefHeight="45.0" prefWidth="605.0" style="-fx-background-color: #192552;" text="Pay" textFill="WHITE">
+            <Button fx:id="paymentBTN" layoutX="92.0" layoutY="684.0" mnemonicParsing="false" onAction="#submit" prefHeight="45.0" prefWidth="605.0" style="-fx-background-color: #192552;" text="Pay" textFill="WHITE">
                <font>
                   <Font name="Gill Sans MT" size="24.0" />
                </font>
@@ -92,12 +95,32 @@
                </font>
             </TextField>
             <TextField fx:id="cardCVCField" layoutX="391.0" layoutY="298.0" prefHeight="44.0" prefWidth="302.5" promptText="CVC" />
-            <ProgressIndicator fx:id="progressIndicator" layoutX="-26.0" layoutY="329.0" visible="false" />
+            <AnchorPane fx:id="successPane" layoutX="110.0" layoutY="265.0" prefHeight="272.0" prefWidth="572.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 20px;" visible="false">
+               <children>
+                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="269.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../pic_resources/check.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="166.0" layoutY="78.0" text="Payment Successful!" textFill="#247930">
+                     <font>
+                        <Font name="Gill Sans MT Bold" size="26.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="143.0" layoutY="115.0" prefHeight="60.0" prefWidth="300.0" text="Congratulations, your payment has been processed successfully. Thank you for your business!" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="Gill Sans MT" size="14.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="continueBTN" layoutX="404.0" layoutY="206.0" mnemonicParsing="false" text="Continue " />
+                  <Hyperlink fx:id="bankReceiptLink" layoutX="103.0" layoutY="207.0" prefHeight="23.0" prefWidth="124.0" text="View Bank Receipt" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="progressPane" layoutX="669.0" layoutY="292.0" prefHeight="187.0" prefWidth="200.0" style="-fx-background-color: #ECEBDE; -fx-background-radius: 20px;" visible="false">
          <children>
-            <ProgressIndicator fx:id="progressIndicator1" layoutX="74.0" layoutY="21.0" prefHeight="59.0" prefWidth="65.0" />
+            <ProgressIndicator fx:id="progressIndicator" layoutX="74.0" layoutY="21.0" prefHeight="59.0" prefWidth="65.0" />
             <Label layoutX="24.0" layoutY="120.0" text="Processing your payment...">
                <font>
                   <Font name="Gill Sans MT" size="14.0" />
