Fixed Minor Issues

--- a/src/main/resources/org/example/softfun_funsoft/css/style.css
+++ b/src/main/resources/org/example/softfun_funsoft/css/style.css
@@ -58,3 +58,7 @@
     -jfx-rippler-fill: transparent; /* Make the ripple transparent */
     -fx-background-color: #F2F2F2; /* Your desired button background */
 }
+#itemScrollpane:focused {
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+}
