--- a/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1541.0" style="-fx-background-color: f8cd2b;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
+<AnchorPane prefHeight="788.0" prefWidth="1541.0" style="-fx-background-color: f8cd2b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
    <children>
       <AnchorPane prefHeight="791.0" prefWidth="771.0" style="-fx-background-color: f8cd2b;">
          <children>
@@ -33,7 +33,7 @@
                   <Font name="Gill Sans MT Bold" size="31.0" />
                </font>
             </Label>
-            <Label fx:id="grandTotal" layoutX="483.0" layoutY="718.0" prefHeight="40.0" prefWidth="286.0" text="Total:">
+            <Label fx:id="grandTotal" layoutX="418.0" layoutY="718.0" prefHeight="40.0" prefWidth="253.0" text="Total:">
                <font>
                   <Font name="Gill Sans MT Bold" size="26.0" />
                </font>
@@ -44,7 +44,6 @@
                   <Font name="Gill Sans MT Bold" size="26.0" />
                </font>
             </JFXButton>
-            <WebView fx:id="webViewLink" layoutY="-2.0" prefHeight="792.0" prefWidth="805.0" visible="false" />
             <ImageView fitHeight="217.0" fitWidth="385.0" layoutX="-59.0" layoutY="101.0" rotate="180.0">
                <image>
                   <Image url="@../../../pic_resources/Fries%20Border.png" />
@@ -60,6 +59,7 @@
                   <Image url="@../../../pic_resources/Fries%20Border.png" />
                </image>
             </ImageView>
+            <WebView fx:id="webViewLink" layoutY="-2.0" prefHeight="792.0" prefWidth="771.0" visible="false" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="802.0" layoutY="37.0" prefHeight="702.0" prefWidth="706.0" style="-fx-background-color: transparent;">
@@ -114,8 +114,7 @@
                </font>
             </TextField>
             <TextField fx:id="cardHolderNameField" layoutX="92.0" layoutY="387.0" prefHeight="44.0" prefWidth="542.0" />
-            <JFXComboBox fx:id="regionComboBox" focusColor="BLACK" layoutX="95.0" layoutY="488.0" prefHeight="44.0" prefWidth="542.0" promptText="Philippines" viewOrder="1.0" />
-            <TextField fx:id="zipField" layoutX="93.0" layoutY="555.0" prefHeight="44.0" prefWidth="542.0" promptText="ZIP" />
+            <TextField fx:id="zipField" layoutX="92.0" layoutY="539.0" prefHeight="44.0" prefWidth="542.0" promptText="ZIP" />
             <Button fx:id="paymentBTN" layoutX="96.0" layoutY="640.0" mnemonicParsing="false" onAction="#submit" prefHeight="46.0" prefWidth="542.0" style="-fx-background-color: #192552;" text="Pay" textFill="WHITE">
                <font>
                   <Font name="Gill Sans MT" size="24.0" />
@@ -127,6 +126,27 @@
                </font>
             </TextField>
             <TextField fx:id="cardCVCField" layoutX="363.0" layoutY="296.0" prefHeight="44.0" prefWidth="268.0" promptText="CVC" />
+            <ImageView fitHeight="40.0" fitWidth="124.0" layoutX="370.0" layoutY="643.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/stripe%20edited.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="82.0" fitWidth="157.0" layoutX="372.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/Stripe%20Logo.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="66.0" fitWidth="71.0" layoutX="264.0" layoutY="2.0">
+               <image>
+                  <Image url="@../../../pic_resources/McLUX_logo.png" />
+               </image>
+            </ImageView>
+            <Text layoutX="345.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X">
+               <font>
+                  <Font name="Gill Sans MT" size="40.0" />
+               </font>
+            </Text>
+            <ComboBox fx:id="regionComboBox" layoutX="91.0" layoutY="488.0" prefHeight="44.0" prefWidth="542.0" promptText="Philippines" />
             <AnchorPane fx:id="successPane" layoutX="110.0" layoutY="265.0" prefHeight="272.0" prefWidth="572.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 20px;" visible="false">
                <children>
                   <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="269.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
@@ -144,38 +164,18 @@
                         <Font name="Gill Sans MT" size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="continueBTN" layoutX="404.0" layoutY="206.0" mnemonicParsing="false" text="Continue " />
+                  <Button fx:id="continueBTN" layoutX="404.0" layoutY="206.0" mnemonicParsing="false" onAction="#setContinueBTN" text="Continue " />
                   <Hyperlink fx:id="bankReceiptLink" layoutX="103.0" layoutY="207.0" prefHeight="23.0" prefWidth="124.0" text="View Bank Receipt" />
                </children>
             </AnchorPane>
-            <ImageView fitHeight="40.0" fitWidth="124.0" layoutX="370.0" layoutY="643.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../pic_resources/stripe%20edited.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="82.0" fitWidth="157.0" layoutX="372.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../pic_resources/Stripe%20Logo.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="66.0" fitWidth="71.0" layoutX="264.0" layoutY="2.0">
-               <image>
-                  <Image url="@../../../pic_resources/McLUX_logo.png" />
-               </image>
-            </ImageView>
-            <Text fill="#192552" layoutX="345.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X">
-               <font>
-                  <Font name="Gill Sans MT" size="40.0" />
-               </font>
-            </Text>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="progressPane" layoutX="606.0" layoutY="292.0" prefHeight="187.0" prefWidth="353.0" style="-fx-background-color: #ECEBDE; -fx-background-radius: 20px;" visible="false">
+      <AnchorPane fx:id="progressPane" layoutX="669.0" layoutY="292.0" prefHeight="187.0" prefWidth="200.0" style="-fx-background-color: #ECEBDE; -fx-background-radius: 20px;" visible="false">
          <children>
-            <ProgressIndicator fx:id="progressIndicator" layoutX="152.0" layoutY="44.0" prefHeight="71.0" prefWidth="93.0" />
-            <Label layoutX="54.0" layoutY="137.0" text="Processing your payment...">
+            <ProgressIndicator fx:id="progressIndicator" layoutX="74.0" layoutY="21.0" prefHeight="59.0" prefWidth="65.0" />
+            <Label layoutX="24.0" layoutY="120.0" text="Processing your payment...">
                <font>
-                  <Font name="Gill Sans MT" size="25.0" />
+                  <Font name="Gill Sans MT" size="14.0" />
                </font>
             </Label>
          </children>
