--- a/src/main/resources/org/example/softfun_funsoft/Receipt.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Receipt.fxml
@@ -6,160 +6,16 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ReceiptController">
+<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ReceiptController">
    <children>
       <Rectangle fill="RED" height="800.0" layoutY="1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
       <Rectangle fill="#f7cc2a" height="108.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
-      <ScrollPane hbarPolicy="NEVER" layoutX="983.0" layoutY="117.0" pannable="true" prefHeight="667.0" prefWidth="462.0" vbarPolicy="NEVER">
-         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="667.0" prefWidth="462.0">
-               <children>
-                  <Text layoutX="166.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EST" wrappingWidth="39.7366943359375">
-                     <font>
-                        <Font name="Gill Sans MT Bold" size="20.0" />
-                     </font>
-                  </Text>
-                  <Text layoutX="270.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2024" wrappingWidth="69.336669921875">
-                     <font>
-                        <Font name="Gill Sans MT Bold" size="20.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="43.0" fitWidth="42.0" layoutX="219.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../pic_resources/McLUX_logo.png" />
-                     </image>
-                  </ImageView>
-                  <Text layoutX="104.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="McLUXIBEE's" wrappingWidth="286.71826171875">
-                     <font>
-                        <Font name="Eras Bold ITC" size="41.0" />
-                     </font>
-                  </Text>
-                  <Text layoutX="192.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fastfood " wrappingWidth="106.98492431640625">
-                     <font>
-                        <Font name="Eras Demi ITC" size="22.0" />
-                     </font>
-                  </Text>
-                  <Line endX="55.00006103515625" layoutX="318.0" layoutY="118.0" startX="-27.199951171875" strokeWidth="3.0" />
-                  <Line endX="55.00006103515625" layoutX="129.0" layoutY="118.0" startX="-27.199951171875" strokeWidth="3.0" />
-                  <Text layoutX="104.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FAST AND DELICIOUS DINER DAVAO CITY, PHILIPPINES" wrappingWidth="263.736572265625">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Text>
-                  <Label layoutX="63.0" layoutY="205.0" prefHeight="34.0" prefWidth="112.0" text="ORDER ID:">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="289.0" layoutY="205.0" prefHeight="34.0" prefWidth="112.0" text="DATE">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="290.0" layoutY="236.0" prefHeight="34.0" prefWidth="112.0" text="TIME">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="115.0" layoutY="295.0" prefHeight="34.0" prefWidth="194.0" text="WANPIECE CHICKEN">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="61.0" layoutY="295.0" prefHeight="34.0" prefWidth="29.0" text="2X">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="163.0" layoutY="205.0" prefHeight="34.0" prefWidth="58.0" text="1234">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="332.0" layoutY="295.0" prefHeight="34.0" prefWidth="103.0" text="PHP200.0">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="115.0" layoutY="324.0" prefHeight="34.0" prefWidth="194.0" text="WANPIECE CHICKEN">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="61.0" layoutY="324.0" prefHeight="34.0" prefWidth="29.0" text="2X">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="332.0" layoutY="324.0" prefHeight="34.0" prefWidth="100.0" text="PHP200.0">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="115.0" layoutY="354.0" prefHeight="34.0" prefWidth="194.0" text="WANPIECE CHICKEN">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="61.0" layoutY="354.0" prefHeight="34.0" prefWidth="29.0" text="2X">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="332.0" layoutY="354.0" prefHeight="34.0" prefWidth="98.0" text="PHP200.0">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="61.0" layoutY="433.0" prefHeight="34.0" prefWidth="194.0" text="SUBTOTAL">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="333.0" layoutY="443.0" prefHeight="34.0" prefWidth="94.0" text="PHP600.0">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="61.0" layoutY="467.0" prefHeight="34.0" prefWidth="194.0" text="TAX">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="333.0" layoutY="468.0" prefHeight="34.0" prefWidth="99.0" text="PHP36.0">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="61.0" layoutY="518.0" prefHeight="46.0" prefWidth="145.0" text="TOTAL:">
-                     <font>
-                        <Font name="Gill Sans MT" size="30.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="296.0" layoutY="517.0" prefHeight="46.0" prefWidth="135.0" text="PHP36.0">
-                     <font>
-                        <Font name="Gill Sans MT" size="30.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="64.0" layoutY="615.0" prefHeight="34.0" prefWidth="194.0" text="CARD PAYMENT">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="299.0" layoutY="615.0" prefHeight="34.0" prefWidth="133.0" text="XXXXXX1234">
-                     <font>
-                        <Font name="Gill Sans MT" size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-         </content>
-      </ScrollPane>
       <ImageView fitHeight="656.0" fitWidth="684.0" layoutX="184.0" layoutY="120.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/McLUX_logo.png" />
@@ -177,7 +33,7 @@
       </Text>
       <Rectangle arcHeight="20.0" arcWidth="20.0" height="89.0" layoutX="123.0" layoutY="547.0" opacity="0.5" stroke="#f5c92c" strokeType="INSIDE" strokeWidth="0.0" width="331.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#f7cc2a" height="89.0" layoutX="119.0" layoutY="542.0" stroke="#f5c92c" strokeType="INSIDE" strokeWidth="5.0" width="331.0" />
-      <JFXButton layoutX="117.0" layoutY="529.0" prefHeight="97.0" prefWidth="334.0" text="Print my receipt, " textFill="WHITE">
+      <JFXButton layoutX="117.0" layoutY="529.0" onAction="#printReceipt" prefHeight="97.0" prefWidth="334.0" text="Print my receipt, " textFill="WHITE">
          <font>
             <Font name="Gill Sans MT Bold" size="25.0" />
          </font>
@@ -199,5 +55,110 @@
             <Font name="Gill Sans MT Bold" size="25.0" />
          </font>
       </Text>
+    <AnchorPane fx:id="receiptAnchorPane" layoutX="983.0" layoutY="117.0" minHeight="0.0" minWidth="0.0" prefHeight="667.0" prefWidth="462.0" style="-fx-background-color: #F2F2F2;">
+         <children>
+            <Text layoutX="166.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EST" wrappingWidth="39.7366943359375">
+               <font>
+                  <Font name="Gill Sans MT Bold" size="20.0" />
+               </font>
+            </Text>
+            <Text layoutX="270.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2024" wrappingWidth="69.336669921875">
+               <font>
+                  <Font name="Gill Sans MT Bold" size="20.0" />
+               </font>
+            </Text>
+            <ImageView fitHeight="43.0" fitWidth="42.0" layoutX="219.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/McLUX_logo.png" />
+               </image>
+            </ImageView>
+            <Text layoutX="104.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="McLUXIBEE's" wrappingWidth="286.71826171875">
+               <font>
+                  <Font name="Eras Bold ITC" size="41.0" />
+               </font>
+            </Text>
+            <Text layoutX="192.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fastfood " wrappingWidth="106.98492431640625">
+               <font>
+                  <Font name="Eras Demi ITC" size="22.0" />
+               </font>
+            </Text>
+            <Line endX="55.00006103515625" layoutX="318.0" layoutY="118.0" startX="-27.199951171875" strokeWidth="3.0" />
+            <Line endX="55.00006103515625" layoutX="129.0" layoutY="118.0" startX="-27.199951171875" strokeWidth="3.0" />
+            <Text layoutX="104.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FAST AND DELICIOUS DINER DAVAO CITY, PHILIPPINES" wrappingWidth="263.736572265625">
+               <font>
+                  <Font name="Gill Sans MT" size="20.0" />
+               </font>
+            </Text>
+            <Label fx:id="orderType" layoutX="63.0" layoutY="205.0" prefHeight="34.0" prefWidth="356.0" text="Order Type:">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="paymentDate" layoutX="63.0" layoutY="228.0" prefHeight="34.0" prefWidth="356.0" text="Payment Date:">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="61.0" layoutY="530.0" prefHeight="34.0" prefWidth="194.0" text="SUBTOTAL">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="subTotal" alignment="CENTER_RIGHT" layoutX="234.0" layoutY="530.0" prefHeight="34.0" prefWidth="186.0" text="PHP 600.0">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="61.0" layoutY="564.0" prefHeight="34.0" prefWidth="194.0" text="TAX">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER_RIGHT" layoutX="237.0" layoutY="564.0" prefHeight="34.0" prefWidth="186.0" text="PHP 36.0">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="61.0" layoutY="598.0" prefHeight="46.0" prefWidth="145.0" text="TOTAL:">
+               <font>
+                  <Font name="Monospaced Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="grandTotal" alignment="CENTER_RIGHT" layoutX="212.0" layoutY="598.0" prefHeight="46.0" prefWidth="212.0" text="PHP 36.0">
+               <font>
+                  <Font name="Monospaced Bold" size="30.0" />
+               </font>
+            </Label>
+            <Label fx:id="paymentType" layoutX="62.0" layoutY="253.0" prefHeight="34.0" prefWidth="356.0" text="Payment Type:">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="cardType" layoutX="62.0" layoutY="279.0" prefHeight="34.0" prefWidth="356.0" text="Card Type:">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <ScrollPane fx:id="itemScrollpane" hbarPolicy="NEVER" layoutX="40.0" layoutY="342.0" pannable="true" prefHeight="185.0" prefWidth="383.0" stylesheets="@css/style.css" vbarPolicy="NEVER">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <VBox fx:id="itemsContainer" layoutX="25.0" layoutY="-1.0" prefHeight="185.0" prefWidth="356.0" spacing="10.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
+            <Label fx:id="cardHolderName" layoutX="62.0" layoutY="303.0" prefHeight="34.0" prefWidth="356.0" text="Card Holder Name:">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="orderID" layoutX="64.0" layoutY="184.0" prefHeight="34.0" prefWidth="356.0" text="Order ID:">
+               <font>
+                  <Font name="Monospaced Regular" size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
