--- a/src/main/resources/org/example/softfun_funsoft/Bye.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Bye.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.DineInOrTakeOutController">
+<AnchorPane fx:id="mainAnchorpane" prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.ByeController">
     <children>
         <Rectangle fill="#db1f2a" height="800.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
         <ImageView fitHeight="512.0" fitWidth="492.0" layoutX="525.0" layoutY="58.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
