--- a/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/CardPayment.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1541.0" style="-fx-background-color: f8cd2b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
+<AnchorPane prefHeight="788.0" prefWidth="1541.0" style="-fx-background-color: f8cd2b;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CardPaymentController">
    <children>
       <AnchorPane prefHeight="791.0" prefWidth="771.0" style="-fx-background-color: f8cd2b;">
          <children>
@@ -59,7 +59,7 @@
                   <Image url="@../../../pic_resources/Fries%20Border.png" />
                </image>
             </ImageView>
-            <WebView fx:id="webViewLink" layoutY="-2.0" prefHeight="800.0" prefWidth="771.0" visible="false" />
+            <WebView fx:id="webViewLink" layoutY="-2.0" prefHeight="791.0" prefWidth="771.0" visible="false" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="802.0" layoutY="37.0" prefHeight="702.0" prefWidth="706.0" style="-fx-background-color: transparent;">
@@ -147,7 +147,7 @@
                </font>
             </Text>
             <ComboBox fx:id="regionComboBox" layoutX="91.0" layoutY="488.0" prefHeight="44.0" prefWidth="542.0" promptText="Philippines" />
-            <AnchorPane fx:id="successPane" layoutX="69.0" layoutY="240.0" prefHeight="272.0" prefWidth="572.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 20px;" visible="false">
+            <AnchorPane fx:id="successPane" layoutX="69.0" layoutY="240.0" prefHeight="272.0" prefWidth="572.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 20px;">
                <children>
                   <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="269.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
