--- a/src/main/resources/org/example/softfun_funsoft/PaymentTypes.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/PaymentTypes.fxml
@@ -9,15 +9,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.PaymentController">
+<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.PaymentController">
     <children>
-        <Rectangle fill="RED" height="800.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
-        <Label layoutX="489.0" layoutY="131.0" text="How would you like to pay?" textFill="WHITE">
+        <Rectangle fill="RED" height="800.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1545.0" />
+      <ImageView fitHeight="925.0" fitWidth="1546.0" layoutX="1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../pic_resources/back.jpg" />
+         </image>
+      </ImageView>
+        <Label layoutX="450.0" layoutY="155.0" text="How would you like to pay?" textFill="WHITE">
             <font>
-                <Font name="Eras Bold ITC" size="40.0" />
+                <Font name="Eras Bold ITC" size="45.0" />
             </font>
         </Label>
-        <Rectangle arcHeight="25.0" arcWidth="25.0" fill="#eeeeee" height="350.0" layoutX="440.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
+        <Rectangle arcHeight="25.0" arcWidth="25.0" fill="WHITE" height="350.0" layoutX="440.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
         <Rectangle arcHeight="25.0" arcWidth="25.0" fill="WHITE" height="350.0" layoutX="787.0" layoutY="248.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
       <ImageView fitHeight="310.0" fitWidth="263.0" layoutX="459.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="309.0" fitWidth="258.0" layoutX="807.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true" />
@@ -41,7 +46,7 @@
       </Text>
       <JFXButton fx:id="cashBTN" layoutX="436.0" layoutY="251.0" onAction="#cardPayment" prefHeight="350.0" prefWidth="310.0" text="." />
       <JFXButton layoutX="777.0" layoutY="248.0" onAction="#cashPayment" prefHeight="350.0" prefWidth="310.0" text="." />
-      <Text fill="YELLOW" layoutX="744.0" layoutY="662.0" strokeType="OUTSIDE" strokeWidth="0.0" text="or">
+      <Text layoutX="744.0" layoutY="662.0" strokeType="OUTSIDE" strokeWidth="0.0" text="or">
          <font>
             <Font name="Eras Light ITC" size="44.0" />
          </font>
